--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "csv-parse": "^4.15.0",
-    "office-ui-fabric-core": "^11.0.0",
     "office-ui-fabric-react": "^7.157.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -58,15 +57,20 @@
     "find-process": "^1.4.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.5.0",
+    "mini-svg-data-uri": "^1.2.3",
     "office-addin-cli": "^1.0.13",
     "office-addin-debugging": "^3.0.34",
     "office-addin-dev-certs": "^1.5.5",
     "office-addin-lint": "^1.0.26",
     "office-addin-manifest": "1.5.7",
     "office-addin-prettier-config": "^1.0.12",
+    "office-ui-fabric-core": "^11.0.0",
     "source-map-loader": "^0.2.4",
+    "svg-inline-loader": "^0.8.2",
+    "svg-url-loader": "^7.1.1",
     "ts-loader": "^6.2.2",
     "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
