--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "app-type-to-debug": "desktop",
     "dev-server-port": 3000
   },
+  "type": "module",
   "scripts": {
-    "build": "webpack -p --mode production --https false",
-    "build:dev": "webpack --mode development --https false",
+    "build": "set DISABLE_V8_COMPILE_CACHE=1&& webpack --mode production --config ./webpack.config.cjs --https false",
+    "build:dev": "set DISABLE_V8_COMPILE_CACHE=1&& webpack --mode development --config ./webpack.config.cjs --https false",
     "build-dev": "webpack --mode development --https false && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
-    "dev-server": "webpack-dev-server --mode development",
+    "build:analyze": "npm run build -- --env.addons=bundleanalyzer",
+    "dev-server": "set DISABLE_V8_COMPILE_CACHE=1&& webpack-dev-server --mode development --config ./webpack.config.cjs",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
@@ -31,7 +33,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "csv-parse": "^4.15.0",
-    "office-ui-fabric-react": "^7.157.2",
+    "office-ui-fabric-react": "^7.158.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -39,6 +41,8 @@
     "@babel/core": "^7.11.6",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.12.13",
+    "@fluentui/webpack-utilities": "^8.0.0-beta.0",
     "@tsconfig/node14": "^1.0.0",
     "@types/find-process": "1.2.0",
     "@types/jquery": "^3.5.5",
@@ -56,6 +60,7 @@
     "file-loader": "^4.2.0",
     "find-process": "^1.4.3",
     "html-loader": "^0.5.5",
+    "html-webpack-inline-svg-plugin": "^2.3.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-svg-data-uri": "^1.2.3",
     "office-addin-cli": "^1.0.13",
@@ -65,6 +70,7 @@
     "office-addin-manifest": "1.5.7",
     "office-addin-prettier-config": "^1.0.12",
     "office-ui-fabric-core": "^11.0.0",
+    "react-loadable": "^5.5.0",
     "source-map-loader": "^0.2.4",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
@@ -72,6 +78,7 @@
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
