Update packages and disable prettier eslint rules

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@fluentui/react": "^7.157.2",
+    "@fluentui/react": "^8.22.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "csv-parse": "^4.15.0",
-    "office-ui-fabric-react": "^7.158.1",
+    "office-addin-debugging": "^4.2.2",
+    "office-addin-manifest": "^1.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -44,6 +45,7 @@
     "@babel/preset-react": "^7.12.13",
     "@fluentui/webpack-utilities": "^8.0.0-beta.0",
     "@tsconfig/node14": "^1.0.0",
+    "@types/es6-promise": "^3.3.0",
     "@types/find-process": "1.2.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.22",
@@ -64,11 +66,8 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-svg-data-uri": "^1.2.3",
     "office-addin-cli": "^1.0.13",
-    "office-addin-debugging": "^3.0.34",
     "office-addin-dev-certs": "^1.5.5",
     "office-addin-lint": "^1.0.26",
-    "office-addin-manifest": "1.5.7",
-    "office-addin-prettier-config": "^1.0.12",
     "office-ui-fabric-core": "^11.0.0",
     "react-loadable": "^5.5.0",
     "source-map-loader": "^0.2.4",
