--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint"
-  ], 
+  ],
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
@@ -10,16 +10,20 @@
       "jsx": true
     },
     "project": "./tsconfig.json"
-    },
+  },
   "extends": [
-    "eslint-config-office-addins",
+    //"eslint-config-office-addins",
     "plugin:node/recommended"
   ],
   "rules": {
     "node/no-unpublished-require": "off",
-    "node/no-unsupported-features/es-syntax": ["warn",{
-      "ignores": ["modules"]
-    }]
-    
+    "node/no-unsupported-features/es-syntax": [
+      "warn",
+      {
+        "ignores": [
+          "modules"
+        ]
+      }
+    ]
   }
 }
