--- a/package.json
+++ b/package.json
@@ -38,22 +38,18 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.12.13",
     "@fluentui/webpack-utilities": "^8.0.0-beta.0",
     "@microsoft/office-js-helpers": "^1.0.2",
     "@tsconfig/node14": "^1.0.0",
     "@types/es6-promise": "^3.3.0",
     "@types/find-process": "1.2.0",
+    "@types/glob": "^7.2.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.22",
     "@types/office-js": "^1.0.204",
     "@types/office-runtime": "^1.0.14",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "eslint": "^7.18.0",
