--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "csv-parse": "^4.16.3",
+    "debug": "^4.3.3",
+    "dotenv": "^14.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -39,6 +41,7 @@
     "@fluentui/webpack-utilities": "^8.0.0-beta.0",
     "@microsoft/office-js-helpers": "^1.0.2",
     "@tsconfig/node14": "^1.0.0",
+    "@types/debug": "^4.1.7",
     "@types/es6-promise": "^3.3.0",
     "@types/find-process": "1.2.0",
     "@types/jquery": "^3.5.5",
@@ -50,6 +53,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-plugin-node": "^11.1.0",
     "file-loader": "^4.2.0",
