Clean up unused code * comment out unused Excel manipulation code * remove unused imports * extend eslint config to include tsx files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,19 @@
         ]
       }
     ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".ts",
+          ".tsx"
+        ],
+        "moduleDirectory": [
+          "src",
+          "node_modules"
+        ]
+      }
+    }
   }
 }
