Update for Node 18 changes to SSL

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "type": "module",
   "scripts": {
     "build": "set DISABLE_V8_COMPILE_CACHE=1&& webpack --mode production --config ./webpack.config.cjs --https false",
-    "build:dev": "set DISABLE_V8_COMPILE_CACHE=1&& webpack --mode development --config ./webpack.config.cjs --https true",
+    "build:dev": "set DISABLE_V8_COMPILE_CACHE=1 && set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode development --config ./webpack.config.cjs --https true",
     "build-dev": "webpack --mode development --https false && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
     "build:analyze": "npm run build -- --env.addons=bundleanalyzer",
-    "dev-server": "set DISABLE_V8_COMPILE_CACHE=1&& webpack-dev-server --mode development --config ./webpack.config.cjs",
+    "dev-server": "set DISABLE_V8_COMPILE_CACHE=1 && set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development --config ./webpack.config.cjs",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
@@ -39,6 +39,7 @@
     "@fluentui/webpack-utilities": "^8.0.0-beta.0",
     "@microsoft/office-js-helpers": "^1.0.2",
     "@tsconfig/node14": "^1.0.0",
+    "@tsconfig/node18": "^1.0.1",
     "@types/es6-promise": "^3.3.0",
     "@types/find-process": "1.2.0",
     "@types/jquery": "^3.5.5",
