--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "baseUrl": ".",
     "experimentalDecorators": true,
@@ -7,9 +8,11 @@
     "noEmitOnError": true,
     "outDir": "lib",
     "sourceMap": true,
-    "target": "ES2015",
+    "moduleResolution": "node",
+    "strict": true,
+    "target": "ES2021",
     "lib": [
-      "ES2015",
+      "ES2021",
       "dom"
     ]
   },
@@ -19,5 +22,5 @@
     "lib",
     "lib-amd"
   ],
-  "extends": "@tsconfig/node14/tsconfig.json"
+  "extends": "@tsconfig/node18/tsconfig.json"
 }
