--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,81 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
+    "env": {
+        "browser": true,
+        "es2021": true
     },
-    "project": "./tsconfig.json"
-  },
-  "extends": [
-    //"eslint-config-office-addins",
-    "plugin:node/recommended"
-  ],
-  "ignorePatterns": [
-    "lib",
-    "lib-amd",
-    "dist",
-    "node_modules",
-    "coverage",
-    "src/**/*.test.ts",
-    "src/**/*.test.tsx",
-    "src/**/*.test.js",
-    "src/**/*.test.jsx"
-  ],
-  "rules": {
-    "node/no-unpublished-require": "off",
-    "node/no-unsupported-features/es-syntax": [
-      "warn",
-      {
-        "ignores": [
-          "modules"
-        ]
-      }
-    ]
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [
-          ".ts",
-          ".tsx"
-        ],
-        "moduleDirectory": [
-          "src",
-          "node_modules"
-        ]
-      }
-    }
-  },
-  "overrides": [
-    {
-      "files": [
-        "**/*.ts",
-        "**/*.tsx"
-      ],
-      "plugins": [
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "plugins": [
         "@typescript-eslint"
-      ],
-      "extends": [
-        "plugin:@typescript-eslint/recommended"
-      ],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "ecmaVersion": 2020,
-        "sourceType": "module",
-        "ecmaFeatures": {
-          "jsx": true
-        },
-        "project": "./tsconfig.json"
-      },
-      "rules": {
-        "node/no-unsupported-features/es-syntax": "off"
-      }
+    ],
+    "rules": {
     }
-  ]
 }
