--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "@types/node": "^14.14.22",
     "@types/office-js": "^1.0.204",
     "@types/office-runtime": "^1.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "file-loader": "^4.2.0",
     "find-process": "^1.4.3",
@@ -79,6 +80,5 @@
   },
   "engines": {
     "node": ">=15.0.0"
-  },
-  "prettier": "office-addin-prettier-config"
+  }
 }
