--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,9 @@
         "clear": true,
         "panel": "shared",
         "showReuseMessage": false
-      }
+      },
+      "problemMatcher": [],
+      "detail": "set DISABLE_V8_COMPILE_CACHE=1 && set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode development --config ./webpack.config.cjs"
     },
     {
       "label": "Build (Production)",
