--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "set DISABLE_V8_COMPILE_CACHE=1&& webpack --mode production --config ./webpack.config.cjs --https false",
-    "build:dev": "set DISABLE_V8_COMPILE_CACHE=1 && set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode development --config ./webpack.config.cjs",
+    "build": "set DISABLE_V8_COMPILE_CACHE=1 set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production --config ./webpack.config.cjs",
+    "build:dev": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode development --stats-optimization-bailout --config ./webpack.config.cjs",
     "build-dev": "webpack --mode development --https false && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
     "build:analyze": "npm run build -- --env.addons=bundleanalyzer",
     "dev-server": "set DISABLE_V8_COMPILE_CACHE=1 && set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development --config ./webpack.config.cjs",
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@fluentui/webpack-utilities": "^8.1.17",
     "@microsoft/office-js-helpers": "^1.0.2",
     "@tsconfig/node18": "^1.0.1",
     "@types/find-process": "1.2.0",
@@ -47,7 +48,7 @@
     "eslint-config-prettier": "^8.8.0",
     "file-loader": "^6.2.0",
     "find-process": "^1.4.3",
-    "html-loader": "^0.5.5",
+    "html-loader": "^4.2.0",
     "html-webpack-inline-svg-plugin": "^2.3.0",
     "html-webpack-plugin": "^5.5.1",
     "office-addin-cli": "^1.0.13",
@@ -60,6 +61,7 @@
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.84.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
   },
